--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ header{
     border: 1px solid black;
     width:50%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 
@@ -22,6 +22,7 @@ header{
     width:50%;
     display: flex;
     justify-content: flex-end;
+    
 }
 
 
@@ -29,14 +30,19 @@ header{
     width: 150px;
     height: 40px;
     margin-top: 23px;
+    margin-left: 20px;
 
 }
 
 .headertextbox{
     height:30px;
     margin-left: 10px;
-    width: 40%;
-    margin-top: 23px;
+    width: 370px;
+    height: 44px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    border-color: #F0F0F0 1px solid;
+    text-align: center;
 
 
 }
