--- a/style.css
+++ b/style.css
@@ -127,8 +127,27 @@ nav ul li a{
 
 .bodysectRight{
     width: 50%;
+    height: 700px;
+    /* background-image: url(rightdiv.png);
+    background-size: 100%;
+    background-repeat: no-repeat; */
+    border: 1px solid black;
+
+}
+
+.bodysectRightTop{
+    width: 100%;
     height: 500px;
     background-image: url(rightdiv.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    border: 1px solid black;
+}
+
+.bodysectRightBottom{
+    width: 100%;
+    height: 500px;
+    background-image: url();
     background-size: 100%;
     background-repeat: no-repeat;
     border: 1px solid black;
@@ -138,4 +157,5 @@ nav ul li a{
 
     width: 50%;
     height: 500px;
+    border: 1px solid black;
 }
