--- a/style.css
+++ b/style.css
@@ -127,35 +127,65 @@ nav ul li a{
 
 .bodysectRight{
     width: 50%;
-    height: 700px;
-    /* background-image: url(rightdiv.png);
-    background-size: 100%;
-    background-repeat: no-repeat; */
-    border: 1px solid black;
-
-}
-
-.bodysectRightTop{
-    width: 100%;
-    height: 500px;
+    height: 800px;
     background-image: url(rightdiv.png);
     background-size: 100%;
     background-repeat: no-repeat;
     border: 1px solid black;
+
 }
 
-.bodysectRightBottom{
-    width: 100%;
-    height: 500px;
-    background-image: url();
-    background-size: 100%;
-    background-repeat: no-repeat;
-    border: 1px solid black;
-}
+
 
 .bodysecLeft{
 
     width: 50%;
-    height: 500px;
+    height: 800px;
     border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    /* justify-content:space-around; */
+    align-items: center;
+}
+
+h1{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 40px;
+    font-weight: 700px;
+    width: 70%;
+   margin: auto;
+}
+
+.para{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    font-weight: 400px;
+    width: 75%;
+   margin: auto;
+}
+
+.SignUpBtnGoogle{
+    height: 48px;
+    width: 368px;
+    background-color: #477CEF;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 21px;
+    border-radius: 4px;
+}
+
+.SignUpBtnFacebook{
+
+    height: 48px;
+    width: 368px;
+    background-color: #3B5998;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 21px;
+    border-radius: 4px;
+   
 }
